Adapt tests to the assetgraph changes between 3.0.0-15 and 3.0.0-33.

--- a/testdata/bin/makeBabelJobAndApplyBabelJob/index.html
+++ b/testdata/bin/makeBabelJobAndApplyBabelJob/index.html
@@ -26,7 +26,7 @@ alert(TR('alreadyPartiallyTranslatedKey', {
     theNotYetTranslatedOne: 'yup'
 }).theNotYetTranslatedOne);
 
-var knockoutTemplate = GETTEXT('template.ko');
+var knockoutTemplate = 'template.ko'.toString('url');
 </script>
 </body>
 </html>
